--- a/app/src/main/res/layout/row_parsed_ingredient.xml
+++ b/app/src/main/res/layout/row_parsed_ingredient.xml
@@ -2,43 +2,46 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:background="@drawable/ingredient_table_bg">
 
     <TextView
         android:id="@+id/quantityTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="16sp"/>
+        android:layout_weight="0.5"
+        android:textSize="18sp"
+        android:gravity="center_horizontal"/>
 
     <TextView
         android:id="@+id/measureTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="16sp"/>
-
+        android:layout_weight="0.8"
+        android:textSize="18sp"
+        android:gravity="center_horizontal"/>
 
     <TextView
         android:id="@+id/foodTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
-        android:textSize="16sp"/>
-
-    <TextView
-        android:id="@+id/caloriesTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="16sp"
-        android:gravity="center"/>
+        android:layout_weight="1.4"
+        android:textSize="18sp"
+    android:gravity="center_horizontal"/>
 
     <TextView
         android:id="@+id/weightTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="16sp"
-        android:gravity="center"/>
+        android:textSize="18sp"
+        android:gravity="center_horizontal"/>
+
+    <TextView
+        android:id="@+id/caloriesTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="18sp"
+        android:gravity="center_horizontal"/>
 </LinearLayout>
