--- a/app/src/main/res/drawable-night/ingredient_table_bg.xml
+++ b/app/src/main/res/drawable-night/ingredient_table_bg.xml
@@ -1,9 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="0dp" />
     <gradient
-        android:startColor="#243F49"
-        android:endColor="#233352"
+        android:startColor="#4D4C3B"
+        android:endColor="#373737"
         android:angle="45" />
+    <stroke
+        android:width="1dp"
+        android:color="#8F8F8F" /> <!-- Set your desired outline color and width here -->
 </shape>
