--- a/app/src/main/res/drawable/ingredient_table_bg.xml
+++ b/app/src/main/res/drawable/ingredient_table_bg.xml
@@ -1,9 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners android:radius="0dp" />
-    <gradient
-        android:startColor="#CDEAFF"
-        android:endColor="#94B9FF"
-        android:angle="45" />
+android:shape="rectangle">
+<corners android:radius="0dp" />
+<gradient
+    android:startColor="#DEE2E8"
+    android:endColor="#C8CFD1"
+    android:angle="45" />
+<stroke
+    android:width="2dp"
+    android:color="#808080" /> <!-- Set your desired outline color and width here -->
 </shape>
