--- a/app/src/main/res/drawable-night/ingredient_table_bg.xml
+++ b/app/src/main/res/drawable-night/ingredient_table_bg.xml
@@ -2,7 +2,7 @@
     android:shape="rectangle">
     <corners android:radius="0dp" />
     <gradient
-        android:startColor="#4D4C3B"
+        android:startColor="#3B4C4D"
         android:endColor="#373737"
         android:angle="45" />
     <stroke
