--- a/app/src/main/res/layout/fragment_nutrition_facts.xml
+++ b/app/src/main/res/layout/fragment_nutrition_facts.xml
@@ -5,12 +5,31 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <EditText
-        android:id="@+id/queryEditText"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/NF_enter_query"
-        android:inputType="text" />
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/queryEditText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="@string/NF_enter_query"
+            android:inputType="text"/>
+
+        <ImageButton
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="0dp"
+            android:id="@+id/micButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_mic"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/mic_description" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
